# -easySTT-voice-control

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logger.rs  main.rs  ollama.rs  piper.rs  server.rs  tts.rs
src/components/: SettingsPanel.css  SettingsPanel.tsx
