[package]
name = "easystt-voice-control"
version = "0.1.0"
description = "Voice commands plugin for easySTT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "easystt_voice_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
anyhow           = "1"
axum             = { version = "0.7" }
tower-http       = { version = "0.6", features = ["cors"] }


[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
panic     = "abort"
strip     = true
